fix not fetchinf shared to users at all and fix going 1 page too high and make plan list fixed height and make cookie have user object and move extra queries outside of index.js file and move share modal outside of aside element

--- a/client/src/routes/Account.module.scss
+++ b/client/src/routes/Account.module.scss
@@ -1,5 +1,6 @@
 .account {
   width: 100%;
+  height: calc(100% - var(--header-height));
 
   .top-bar {
     font-size: 30px;
@@ -14,10 +15,12 @@
       gap: 100px;
     }
   }
+
   .plan-lists {
     display: flex;
     padding: 0 30px;
     gap: 30px;
+    height: 85%;
 
     .plan-list {
       flex-grow: 1;
